# warthog-core

./: .clang-format  CMakeLists.txt  LICENSE  README.md  notes.md
.github/: CODEOWNERS
.github/workflows/: clang-format-apply.yml  clang-format-test.yml  cmake-single-platform.yml
apps/: CMakeLists.txt  cfg.cpp  cfg.h  config.h.in  warthog.cpp
cmake/: config.h.in  headers.cmake  submodule.cmake  warthog.cmake
include/warthog/: constants.h  defines.h  forward.h  limits.h
include/warthog/domain/: grid.h  gridmap.h  labelled_gridmap.h
include/warthog/geometry/: geography.h  geom.h
include/warthog/heuristic/: heuristic_value.h  manhattan_heuristic.h  octile_heuristic.h  zero_heuristic.h
include/warthog/io/: grid.h  grid_trace.h  listener.h  posthoc_listener.h  stream_listener.h
include/warthog/memory/: arraylist.h  bittable.h  cpool.h  node_pool.h
include/warthog/search/: dummy_filter.h  dummy_listener.h  expansion_policy.h  gridmap_expansion_policy.h  noop_search.h  problem_instance.h  search.h  search_metrics.h  search_node.h  search_parameters.h  solution.h  uds_traits.h  unidirectional_search.h  vl_gridmap_expansion_policy.h
include/warthog/util/: cast.h  cost_table.h  dimacs_parser.h  experiment.h  file_utils.h  gm_parser.h  helpers.h  intrin.h  log.h  macros.h  pqueue.h  scenario_manager.h  template.h  timer.h  vec_io.h
src/: CMakeLists.txt
src/domain/: gridmap.cpp
src/geometry/: geography.cpp  geom.cpp
src/io/: grid.cpp  listeners.cpp  traces.cpp
src/memory/: node_pool.cpp
src/search/: expansion_policy.cpp  gridmap_expansion_policy.cpp  problem_instance.cpp  search_metrics.cpp  search_node.cpp  solution.cpp  vl_gridmap_expansion_policy.cpp
src/util/: cost_table.cpp  dimacs_parser.cpp  experiment.cpp  file_utils.cpp  gm_parser.cpp  helpers.cpp  scenario_manager.cpp  timer.cpp
tests/: CMakeLists.txt
tests/memory/: CMakeLists.txt  bittable.cxx
tests/units/: CMakeLists.txt  grid.cxx
tools/: update_file.py
